@@ -11,3 +11,5 @@ TODO list for Olive
    toggled) (j-a-meinel)
  - "Probe location" button on the Push dialog (test write access, etc.) (ddaa)
  - Save and restore main window position and size (phanatic)
+ - Real sensitive context menu - e.g. options are grey if not a branch
+   (phanatic)
