@@ -2197,7 +2197,6 @@
 <widget class="GtkWindow" id="window_diff">
   <property name="width_request">600</property>
   <property name="height_request">400</property>
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Olive - Diff</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
@@ -2314,7 +2313,6 @@
 <widget class="GtkWindow" id="window_status">
   <property name="width_request">400</property>
   <property name="height_request">300</property>
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Olive - Status</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
